--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "@wdio/spec-reporter": "^7.14.1",
     "chromedriver": "^94.0.0",
     "wdio-chromedriver-service": "^7.2.2"
+  },
+  "dependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3"
   }
 }
