--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "@wdio/local-runner": "^7.14.1",
     "@wdio/spec-reporter": "^7.14.1",
     "chromedriver": "^94.0.0",
-    "wdio-chromedriver-service": "^7.2.2"
+    "wdio-chromedriver-service": "^7.2.2",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/register": "^7.12.10",
+    "mocha": "^8.2.1"
   },
   "dependencies": {
     "chai": "^4.3.4",
