--- a/package.json
+++ b/package.json
@@ -18,20 +18,19 @@
   "homepage": "https://github.com/BryanMerlo5/automation-challenge-gbm#readme",
   "devDependencies": {
     "@wdio/cli": "^6.12.1",
-    "@wdio/cucumber-framework": "^7.14.1",
-    "@wdio/local-runner": "^7.14.1",
-    "@wdio/spec-reporter": "^7.14.1",
-    "chromedriver": "^94.0.0",
-    "wdio-chromedriver-service": "^7.2.2",
+    "@wdio/cucumber-framework": "^6.11.1",
+    "@wdio/local-runner": "^6.12.1",
+    "@wdio/spec-reporter": "^6.11.0",
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/register": "^7.12.10",
-    "mocha": "^8.2.1"
+    "chromedriver": "^94.0.0",
+    "mocha": "^9.1.3",
+    "wdio-chromedriver-service": "^6.0.4"
   },
   "dependencies": {
     "chai": "^4.3.4",
-    "mocha": "^9.1.3",
     "selenium-webdriver": "^4.0.0"
   }
 }
